<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_welcome_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="40dp">
<!--        <ImageView-->
<!--        android:id="@+id/abstract_background"-->
<!--         android:layout_width="0dp"-->
<!--         android:layout_height="0dp"-->
<!--         android:src=""-->
<!--         android:scaleType="centerCrop"-->
<!--         app:layout_constraintBottom_toBottomOf="parent"-->
<!--         app:layout_constraintEnd_toEndOf="parent"-->
<!--         app:layout_constraintStart_toStartOf="parent"-->
<!--         app:layout_constraintTop_toTopOf="parent"-->
<!--         android:alpha="0.3"-->
<!--         android:contentDescription="@string/abstract_bg" />-->

        <ImageView
          android:id="@+id/profile_icon"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:src="@drawable/ic_account"
          android:background="@drawable/circle_white_bg"
          android:padding="8dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginStart="16dp"
          android:layout_marginTop="?attr/actionBarSize"
          android:layout_marginBottom="24dp"
          android:contentDescription="@string/text_photo" />

        <TextView
          android:id="@+id/tv_welcome_greeting"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_greeting"
           android:textColor="@color/white"
           android:textSize="14sp"
           app:layout_constraintStart_toEndOf="@id/profile_icon"
           app:layout_constraintTop_toTopOf="@id/profile_icon"
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp" />

        <TextView
           android:id="@+id/tv_rekan_pkl"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_nama_rekan"
           android:textColor="@color/white"
           android:textStyle="bold"
           android:textSize="20sp"
           app:layout_constraintStart_toStartOf="@id/tv_welcome_greeting"
           app:layout_constraintTop_toBottomOf="@id/tv_welcome_greeting" />



    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
           android:id="@+id/pkl_id_card"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           app:cardCornerRadius="8dp"
           app:cardElevation="4dp"
           app:layout_constraintBottom_toBottomOf="@id/welcome_section"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/welcome_section">

           <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
                <ImageView
                    android:id="@+id/pkl_id_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/siapkerjaid_color"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/text_pkl_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_acces_pkl_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pkl_id_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/bg_button_gray"
                android:text="Masuk untuk Akses Jejak PKL Skadel"
                android:textColor="@color/text_dark"
                android:layout_marginTop="8dp"
                android:letterSpacing="-0.04"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textAlignment="viewStart"
                android:layout_marginStart="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>